[package]
name = "project_blueberry"
version = "0.1.0"
authors = ["Brooks Palin <brookspalin710@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.6.0"
winit = "0.25.0"
winit_input_helper = "0.10"
